@@ -1,4 +1,5 @@
 0.5.0
+* config.fs: new word ?free for freeing memory blocks (2007-05-21)
 * rgx: new module (Regular Expression) (2007-05-10)
 * nfe: new module (Non-deterministic finite automata expression) (2007-05-08)
 * nfs: new module (Non-deterministic finite automata state) (2007-05-07)
@@ -11,7 +12,7 @@
 * nnn: new module (n-Tree base node) (2007-03-04)
 * sci: extends sni
 * scl: extends snl
-* scn: new modules scn-cell! scn-cell@
+* scn: new words scn-cell! scn-cell@
 * scn: extends snn
 * sni: new module (Single linked base iterator) (2007-02-27)
 * snl: new module (Single linked base list) (2007-02-26)
